--- a/spec/fixtures/vcr_cassettes/WeatherFacade/Happy_path_-_data_returned_as_expected/returns_current_weather_daily_weather_hourly_weather_data_for_a_location.yml
+++ b/spec/fixtures/vcr_cassettes/WeatherFacade/Happy_path_-_data_returned_as_expected/returns_current_weather_daily_weather_hourly_weather_data_for_a_location.yml
@@ -2,7 +2,63 @@
 http_interactions:
 - request:
     method: get
-    uri: http://api.openweathermap.org/data/2.5/onecall?appid=fe4fded481af63069564cb0e5d97b3ec&exclude=minutely,alerts&key=fe4fded481af63069564cb0e5d97b3ec&lat=40.0158&lon=-105.2793&units=imperial
+    uri: http://www.mapquestapi.com/geocoding/v1/address?key=rXKxhUwdl8iTdNqGbgqB3sBNQlEnXwG0&location=boulder,co
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.4.2
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Sun, 13 Jun 2021 19:39:23 GMT
+      Content-Type:
+      - application/json;charset=UTF-8
+      Content-Length:
+      - '1732'
+      Access-Control-Allow-Methods:
+      - OPTIONS,GET,POST
+      Access-Control-Allow-Origin:
+      - "*"
+      Cache-Control:
+      - no-cache, must-revalidate
+      Expires:
+      - Mon, 20 Dec 1998 01:00:00 GMT
+      Geocodetransactioncount:
+      - '1'
+      Last-Modified:
+      - Sun, 13 Jun 2021 19:39:23 GMT
+      Pragma:
+      - no-cache
+      Reversegeocodetransactioncount:
+      - '0'
+      Server:
+      - Apache-Coyote/1.1
+      Set-Cookie:
+      - JSESSIONID=5AD1DB1665C716AFC6D8DD48AFAABC28; Path=/; HttpOnly
+      Status:
+      - success
+      Transactionweight:
+      - '1.0'
+    body:
+      encoding: UTF-8
+      string: '{"info":{"statuscode":0,"copyright":{"text":"\u00A9 2021 MapQuest,
+        Inc.","imageUrl":"http://api.mqcdn.com/res/mqlogo.gif","imageAltText":"\u00A9
+        2021 MapQuest, Inc."},"messages":[]},"options":{"maxResults":-1,"thumbMaps":true,"ignoreLatLngInput":false},"results":[{"providedLocation":{"location":"boulder,co"},"locations":[{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"Boulder","adminArea5Type":"City","adminArea4":"Boulder
+        County","adminArea4Type":"County","adminArea3":"CO","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A5XAX","geocodeQuality":"CITY","dragPoint":false,"sideOfStreet":"N","linkId":"282039983","unknownInput":"","type":"s","latLng":{"lat":40.015831,"lng":-105.27927},"displayLatLng":{"lat":40.015831,"lng":-105.27927},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=rXKxhUwdl8iTdNqGbgqB3sBNQlEnXwG0&type=map&size=225,160&locations=40.015831,-105.27927|marker-sm-50318A-1&scalebar=true&zoom=12&rand=-1996848558"},{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"","adminArea5Type":"City","adminArea4":"Boulder
+        County","adminArea4Type":"County","adminArea3":"CO","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A4XAX","geocodeQuality":"COUNTY","dragPoint":false,"sideOfStreet":"N","linkId":"282931994","unknownInput":"","type":"s","latLng":{"lat":40.015831,"lng":-105.27927},"displayLatLng":{"lat":40.015831,"lng":-105.27927},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=rXKxhUwdl8iTdNqGbgqB3sBNQlEnXwG0&type=map&size=225,160&locations=40.015831,-105.27927|marker-sm-50318A-2&scalebar=true&zoom=9&rand=125998889"}]}]}'
+  recorded_at: Sun, 13 Jun 2021 19:39:23 GMT
+- request:
+    method: get
+    uri: http://api.openweathermap.org/data/2.5/onecall?appid=fe4fded481af63069564cb0e5d97b3ec&exclude=minutely,alerts&key=fe4fded481af63069564cb0e5d97b3ec&lat=40.015831&lon=-105.27927&units=imperial
     body:
       encoding: US-ASCII
       string: ''
@@ -21,11 +77,11 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Sun, 13 Jun 2021 19:32:32 GMT
+      - Sun, 13 Jun 2021 19:39:27 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '17422'
+      - '17419'
       Connection:
       - keep-alive
       X-Cache-Key:
@@ -38,13 +94,13 @@ http_interactions:
       - GET, POST
     body:
       encoding: UTF-8
-      string: '{"lat":40.0158,"lon":-105.2793,"timezone":"America/Denver","timezone_offset":-21600,"current":{"dt":1623612752,"sunrise":1623583904,"sunset":1623637856,"temp":87.91,"feels_like":87.78,"pressure":1021,"humidity":40,"dew_point":60.58,"uvi":11.65,"clouds":1,"visibility":10000,"wind_speed":1.99,"wind_deg":126,"wind_gust":5.99,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}]},"hourly":[{"dt":1623610800,"temp":88.03,"feels_like":87.19,"pressure":1019,"humidity":37,"dew_point":58.51,"uvi":12.36,"clouds":4,"visibility":10000,"wind_speed":8.93,"wind_deg":94,"wind_gust":10.22,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1623614400,"temp":87.91,"feels_like":87.78,"pressure":1021,"humidity":40,"dew_point":60.58,"uvi":11.65,"clouds":1,"visibility":10000,"wind_speed":7.47,"wind_deg":93,"wind_gust":8.72,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1623618000,"temp":88.74,"feels_like":87.57,"pressure":1019,"humidity":35,"dew_point":57.58,"uvi":9.6,"clouds":8,"visibility":10000,"wind_speed":9.48,"wind_deg":74,"wind_gust":10.56,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1623621600,"temp":89.67,"feels_like":87.76,"pressure":1017,"humidity":31,"dew_point":55.04,"uvi":6.92,"clouds":17,"visibility":10000,"wind_speed":7.54,"wind_deg":79,"wind_gust":10.49,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"pop":0},{"dt":1623625200,"temp":90.09,"feels_like":87.6,"pressure":1014,"humidity":28,"dew_point":52.61,"uvi":4.09,"clouds":28,"visibility":10000,"wind_speed":12.64,"wind_deg":88,"wind_gust":9.73,"weather":[{"id":802,"main":"Clouds","description":"scattered
-        clouds","icon":"03d"}],"pop":0},{"dt":1623628800,"temp":89.53,"feels_like":86.83,"pressure":1011,"humidity":27,"dew_point":51.15,"uvi":1.9,"clouds":39,"visibility":10000,"wind_speed":11.16,"wind_deg":116,"wind_gust":9.44,"weather":[{"id":802,"main":"Clouds","description":"scattered
+      string: '{"lat":40.0158,"lon":-105.2793,"timezone":"America/Denver","timezone_offset":-21600,"current":{"dt":1623613167,"sunrise":1623583904,"sunset":1623637856,"temp":88.14,"feels_like":88.09,"pressure":1021,"humidity":40,"dew_point":60.8,"uvi":11.65,"clouds":1,"visibility":10000,"wind_speed":1.01,"wind_deg":115,"wind_gust":8.01,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}]},"hourly":[{"dt":1623610800,"temp":88.23,"feels_like":87.44,"pressure":1019,"humidity":37,"dew_point":58.69,"uvi":12.36,"clouds":4,"visibility":10000,"wind_speed":8.93,"wind_deg":94,"wind_gust":10.22,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1623614400,"temp":88.14,"feels_like":88.09,"pressure":1021,"humidity":40,"dew_point":60.8,"uvi":11.65,"clouds":1,"visibility":10000,"wind_speed":7.47,"wind_deg":93,"wind_gust":8.72,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1623618000,"temp":88.92,"feels_like":87.78,"pressure":1019,"humidity":35,"dew_point":57.74,"uvi":9.6,"clouds":8,"visibility":10000,"wind_speed":9.48,"wind_deg":74,"wind_gust":10.56,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1623621600,"temp":89.8,"feels_like":87.91,"pressure":1017,"humidity":31,"dew_point":55.15,"uvi":6.92,"clouds":17,"visibility":10000,"wind_speed":7.54,"wind_deg":79,"wind_gust":10.49,"weather":[{"id":801,"main":"Clouds","description":"few
+        clouds","icon":"02d"}],"pop":0},{"dt":1623625200,"temp":90.18,"feels_like":87.71,"pressure":1014,"humidity":28,"dew_point":52.7,"uvi":4.09,"clouds":28,"visibility":10000,"wind_speed":12.64,"wind_deg":88,"wind_gust":9.73,"weather":[{"id":802,"main":"Clouds","description":"scattered
+        clouds","icon":"03d"}],"pop":0},{"dt":1623628800,"temp":89.58,"feels_like":86.88,"pressure":1011,"humidity":27,"dew_point":51.21,"uvi":1.9,"clouds":39,"visibility":10000,"wind_speed":11.16,"wind_deg":116,"wind_gust":9.44,"weather":[{"id":802,"main":"Clouds","description":"scattered
         clouds","icon":"03d"}],"pop":0},{"dt":1623632400,"temp":86.31,"feels_like":84.04,"pressure":1010,"humidity":30,"dew_point":49.23,"uvi":0.63,"clouds":90,"visibility":10000,"wind_speed":7.54,"wind_deg":65,"wind_gust":12.28,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04d"}],"pop":0.08},{"dt":1623636000,"temp":76.71,"feels_like":76.19,"pressure":1014,"humidity":45,"dew_point":51.33,"uvi":0,"clouds":91,"visibility":10000,"wind_speed":15.1,"wind_deg":8,"wind_gust":19.82,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04d"}],"pop":0.16},{"dt":1623639600,"temp":67.89,"feels_like":67.44,"pressure":1017,"humidity":65,"dew_point":52.63,"uvi":0,"clouds":77,"visibility":10000,"wind_speed":9.37,"wind_deg":295,"wind_gust":11.59,"weather":[{"id":803,"main":"Clouds","description":"broken
@@ -87,7 +143,7 @@ http_interactions:
         sky","icon":"01d"}],"pop":0},{"dt":1623772800,"temp":86.79,"feels_like":83.62,"pressure":1015,"humidity":22,"dew_point":41,"uvi":6.79,"clouds":0,"visibility":10000,"wind_speed":5.19,"wind_deg":96,"wind_gust":5.01,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"pop":0},{"dt":1623776400,"temp":89.51,"feels_like":85.87,"pressure":1014,"humidity":20,"dew_point":41.29,"uvi":9.68,"clouds":0,"visibility":10000,"wind_speed":6.58,"wind_deg":93,"wind_gust":7.27,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"pop":0},{"dt":1623780000,"temp":92.59,"feels_like":88.63,"pressure":1013,"humidity":18,"dew_point":41.13,"uvi":11.85,"clouds":0,"visibility":10000,"wind_speed":6.76,"wind_deg":93,"wind_gust":8.12,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0}],"daily":[{"dt":1623610800,"sunrise":1623583904,"sunset":1623637856,"moonrise":1623593220,"moonset":1623648600,"moon_phase":0.1,"temp":{"day":88.03,"min":61.52,"max":90.09,"night":66.83,"eve":86.31,"morn":69.64},"feels_like":{"day":87.19,"night":66.22,"eve":84.04,"morn":67.95},"pressure":1019,"humidity":37,"dew_point":58.51,"wind_speed":15.1,"wind_deg":8,"wind_gust":19.82,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0}],"daily":[{"dt":1623610800,"sunrise":1623583904,"sunset":1623637856,"moonrise":1623593220,"moonset":1623648600,"moon_phase":0.1,"temp":{"day":88.23,"min":61.52,"max":90.18,"night":66.83,"eve":86.31,"morn":69.64},"feels_like":{"day":87.44,"night":66.22,"eve":84.04,"morn":67.95},"pressure":1019,"humidity":37,"dew_point":58.69,"wind_speed":15.1,"wind_deg":8,"wind_gust":19.82,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"clouds":4,"pop":0.28,"uvi":12.36},{"dt":1623697200,"sunrise":1623670303,"sunset":1623724281,"moonrise":1623683340,"moonset":0,"moon_phase":0.14,"temp":{"day":92.01,"min":61.68,"max":94.98,"night":73.72,"eve":88.09,"morn":70.27},"feels_like":{"day":87.85,"night":71.98,"eve":84.87,"morn":69.06},"pressure":1012,"humidity":16,"dew_point":36.77,"wind_speed":11.88,"wind_deg":62,"wind_gust":12.46,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"clouds":0,"pop":0.24,"uvi":12.64},{"dt":1623783600,"sunrise":1623756704,"sunset":1623810704,"moonrise":1623773640,"moonset":1623737220,"moon_phase":0.17,"temp":{"day":95.23,"min":67.12,"max":97.65,"night":74.77,"eve":83.68,"morn":73.8},"feels_like":{"day":90.86,"night":73.45,"eve":82.06,"morn":72.61},"pressure":1012,"humidity":15,"dew_point":39.16,"wind_speed":15.28,"wind_deg":40,"wind_gust":17.94,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"clouds":0,"pop":0.07,"uvi":12.85},{"dt":1623870000,"sunrise":1623843107,"sunset":1623897125,"moonrise":1623864060,"moonset":1623825540,"moon_phase":0.2,"temp":{"day":97,"min":67.46,"max":97,"night":67.46,"eve":82.45,"morn":71.78},"feels_like":{"day":92.34,"night":66.87,"eve":81.09,"morn":70.21},"pressure":1011,"humidity":13,"dew_point":35.62,"wind_speed":17.38,"wind_deg":47,"wind_gust":20.67,"weather":[{"id":500,"main":"Rain","description":"light
@@ -96,5 +152,5 @@ http_interactions:
         rain","icon":"10d"}],"clouds":85,"pop":0.71,"rain":1.46,"uvi":12},{"dt":1624129200,"sunrise":1624102326,"sunset":1624156379,"moonrise":1624135620,"moonset":1624089660,"moon_phase":0.31,"temp":{"day":88.74,"min":61.14,"max":92.66,"night":71.51,"eve":66.49,"morn":62.02},"feels_like":{"day":85.35,"night":70.75,"eve":65.93,"morn":60.84},"pressure":1008,"humidity":22,"dew_point":42.42,"wind_speed":14.58,"wind_deg":78,"wind_gust":12.71,"weather":[{"id":500,"main":"Rain","description":"light
         rain","icon":"10d"}],"clouds":5,"pop":0.52,"rain":2.03,"uvi":12},{"dt":1624215600,"sunrise":1624188736,"sunset":1624242793,"moonrise":1624226400,"moonset":1624177740,"moon_phase":0.34,"temp":{"day":93.04,"min":63.55,"max":93.04,"night":63.55,"eve":81.32,"morn":65.82},"feels_like":{"day":88.66,"night":63.37,"eve":80.1,"morn":64.22},"pressure":1005,"humidity":14,"dew_point":35.28,"wind_speed":13.8,"wind_deg":260,"wind_gust":18.7,"weather":[{"id":501,"main":"Rain","description":"moderate
         rain","icon":"10d"}],"clouds":8,"pop":0.73,"rain":6.56,"uvi":12}]}'
-  recorded_at: Sun, 13 Jun 2021 19:32:32 GMT
+  recorded_at: Sun, 13 Jun 2021 19:39:27 GMT
 recorded_with: VCR 6.0.0
